--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <header class="topbar"><h1>Student Management (UI Only)</h1></header>
+  <header class="topbar"><h1>Student Management</h1></header>
   <main class="container grid">
     <section class="card">
       <h2>Add Student</h2>
